--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li class="fa-solid fa-star"></li>
             </ul>
 
-            <span class="moves">10</span> Moves
+            <p><span class="moves">10</span> Moves</p>
 
             <div class='timer'>
                 Timer <span class='timer-text'>00:00:00</span>
@@ -31,59 +31,59 @@
             </div>
 
         </section>
-
-        <ul class="deck">
-            <li class="card">
-                <i class="fa-solid fa-apple-whole"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-apple-whole"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-fish-fins"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-fish-fins"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-cat"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-cat"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-crow"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-crow"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-dragon"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-dragon"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-otter"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-otter"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-hand-spock"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-hand-spock"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-seedling"></i>
-            </li>
-            <li class="card">
-                <i class="fa-solid fa-seedling"></i>
-            </li>
-        </ul>
-
     </header>
+
+    <ul class="deck">
+        <li class="card">
+            <i class="fa-solid fa-apple-whole"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-apple-whole"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-fish-fins"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-fish-fins"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-cat"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-cat"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-crow"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-crow"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-dragon"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-dragon"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-otter"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-otter"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-hand-spock"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-hand-spock"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-seedling"></i>
+        </li>
+        <li class="card">
+            <i class="fa-solid fa-seedling"></i>
+        </li>
+    </ul>
+
 
 
     <script src="app.js"></script>
