--- a/index.html
+++ b/index.html
@@ -35,54 +35,56 @@
 
     <ul class="deck">
         <li class="card">
-            <i class="fa-solid fa-apple-whole"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-apple-whole"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-fish-fins"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-fish-fins"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-cat"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-cat"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-crow"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-crow"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-dragon"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-dragon"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-otter"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-otter"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-hand-spock"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-hand-spock"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-seedling"></i>
+            <i class="fa-solid"></i>
         </li>
         <li class="card">
-            <i class="fa-solid fa-seedling"></i>
+            <i class="fa-solid"></i>
         </li>
     </ul>
+
+    <div class="modal"></div>
 
 
 
