--- a/index.html
+++ b/index.html
@@ -84,9 +84,19 @@
         </li>
     </ul>
 
-    <div class="modal"></div>
-
-
+    <div class="modal">
+        <h1>Congratulations!!!</h1>
+        <ul class="stars">
+            <li class="fa-solid fa-star"></li>
+            <li class="fa-solid fa-star"></li>
+            <li class="fa-solid fa-star"></li>
+        </ul>
+        <p><span class="moves">0</span> Moves</p>
+        <div class='timer'>
+            Timer <span class='timer-text'>00:00:00</span>
+        </div>
+        <button class="play-again">Play Again</button>
+    </div>
 
     <script src="app.js"></script>
 </body>
