--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class='timer'>
             Timer <span class='timer-text'>00:00</span>
         </div>
-        <button class="play-again">Play Again</button>
+        <button type="button" class="play-again">Play Again</button>
     </div>
 
     <script src="app.js"></script>
